# MyFitnessPal-Grafana

./: .air.toml  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  main.py  models.go  package.json  pyproject.toml  tailwind.config.js
cmd/app/: main.go
internal/assets/: output.css  script.js
internal/assets/templates/: error.html  index.html  snapshot_iframe.html  success_validation.html
internal/grafana/: access.go  dashboard.go  dashboard_model.go  dashboard_test.go  datasource.go  snapshot.go  snapshot_test.go
internal/handler/: error.go  index.go  upload.go  visualize.go
internal/handler/templates/: index.html  success_validation.html
internal/models/: clientError.go  csvTransformation.go  csvTransformation_test.go  csvValidation.go  csv_validation.go
internal/router/: routes.go
pkg/config/: serverConfig.go  server_config.go
